--- a/index.html
+++ b/index.html
@@ -99,54 +99,33 @@
 								<fieldset class="filter-form-item">
 									<legend class="filter-form-title">Подберите цвет для своих окон:</legend>
 									<ul class="filter-form-choice-color-list">
-										<li class="filter-form-choice-color-item">					
-											<label for="filter-irish-oak">
-												<input type="checkbox" class="visually-hidden filter-input filter-input-checkbox" name="irish-oak" id="filter-irish-oak" checked>
-												<span class="filter-form-checkbox-icon_irish-oak"></span>
-												<span class="filter-form-checkbox-label"></span>
-											</label>
+										<li class="filter-form-choice-color-item">	
+											<input type="checkbox" class="filter-input-checkbox" name="irish-oak" id="filter-irish-oak" checked>
+											<label for="filter-irish-oak" class="filter-form-choice-color"></label>
 										</li>
 										<li class="filter-form-choice-color-item">					
-											<label for="filter-mountain-pine">
-												<input type="checkbox" class="visually-hidden filter-input filter-input-checkbox" name="mountain-pine" id="filter-mountain-pine">
-												<span class="filter-form-checkbox-icon_mountain-pine"></span>
-												<span class="filter-form-checkbox-label"></span>
-											</label>
+											<input type="checkbox" class="filter-input-checkbox" name="mountain-pine" id="filter-mountain-pine">
+											<label for="filter-mountain-pine"></label>
 										</li>
 										<li class="filter-form-choice-color-item">					
-											<label for="filter-oregon">
-												<input type="checkbox" class="visually-hidden filter-input filter-input-checkbox" name="oregon" id="filter-oregon">
-												<span class="filter-form-checkbox-icon_oregon"></span>
-												<span class="filter-form-checkbox-label"></span>
-											</label>
+											<input type="checkbox" class="filter-input-checkbox" name="oregon" id="filter-oregon">
+											<label for="filter-oregon"></label>
 										</li>
 										<li class="filter-form-choice-color-item">					
-											<label for="filter-light-oak">
-												<input type="checkbox" class="visually-hidden filter-input filter-input-checkbox" name="light-oak" id="filter-light-oak">
-												<span class="filter-form-checkbox-icon_light-oak"></span>
-												<span class="filter-form-checkbox-label"></span>
-											</label>
+											<input type="checkbox" class="filter-input-checkbox" name="light-oak" id="filter-light-oak">
+											<label for="filter-light-oak"></label>
 										</li>
-										<li class="filter-form-choice-color-item">					
-											<label for="filter-nut">
-												<input type="checkbox" class="visually-hidden filter-input filter-input-checkbox" name="nut" id="filter-nut">
-												<span class="filter-form-checkbox-icon_nut"></span>
-												<span class="filter-form-checkbox-label"></span>
-											</label>
+										<li class="filter-form-choice-color-item">				
+											<input type="checkbox" class="filter-input-checkbox" name="nut" id="filter-nut">
+											<label for="filter-nut"></label>
 										</li>
-										<li class="filter-form-choice-color-item">					
-											<label for="filter-golden-oak">
-												<input type="checkbox" class="visually-hidden filter-input filter-input-checkbox" name="golden-oak" id="filter-golden-oak">
-												<span class="filter-form-checkbox-icon_golden-oak"></span>
-												<span class="filter-form-checkbox-label"></span>
-											</label>
+										<li class="filter-form-choice-color-item">		
+											<input type="checkbox" class="filter-input-checkbox" name="golden-oak" id="filter-golden-oak">
+											<label for="filter-golden-oak"></label>
 										</li>
-										<li class="filter-form-choice-color-item">					
-											<label for="filter-walnut">
-												<input type="checkbox" class="visually-hidden filter-input filter-input-checkbox" name="walnut" id="filter-walnut">
-												<span class="filter-form-checkbox-icon_walnut"></span>
-												<span class="filter-form-checkbox-label"></span>
-											</label>
+										<li class="filter-form-choice-color-item">		
+											<input type="checkbox" class="filter-input-checkbox" name="walnut" id="filter-walnut">
+											<label for="filter-walnut" class="show"></label>
 										</li>
 									</ul>
 								</fieldset>
@@ -163,7 +142,7 @@
 				<h3 class="section-title-lamination">Зачем использовать ламинацию</h3>
 				<ul class="section-list-lamination">
 					<li class="section-item-lamination section-shape1">Чтобы придать внешнему виду окна оригинальную выразительность, специалисты применяют ламинацию – приём, при помощи которого можно декорировать своё жилье с учетом самых современных веяний дизайнерского искусства.</li>
-					<li class="section-item-lamination section-forma1">При помощи ламинации оконного профиля можно, например, со всей точностью воспроизвести оттенки и структуру древесины: при этом обеспечивается полная визуализация натурального дерева, точно имитирующая расположение волокон. Помимо имитации деревянных поверхностей, применяют пленку самых разных цветов и фактур.</li>					
+					<li class="section-item-lamination section-forma1">При помощи ламинации оконного профиля можно, например, со всей точностью воспроизвести оттенки и структуру древесины: при этом обеспечивается полная визуализация натурального дерева, точно имитирующая расположение волокон. Помимо имитации деревянных поверхностей, применяют пленку самых разных цветов и фактур.</li>				
 				</ul>
 				<h3 class="section-title-lamination">Как окна становятся цветными?</h3>
 				<ul class="section-list-how-windows-become-colored">
